--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,10 @@
 # Ignore .DS_store file
 .DS_Store
 
-# Ignore Gemfile.lock
-/Gemfile.lock
-
 # Ignore gitconfig
 .gitconfig
+
+# Ignore bundler config
+/.bundle
+
+
